Added upgrade to websocket server

--- a/env-files/production.env
+++ b/env-files/production.env
@@ -1,8 +1,6 @@
 NODE_ENV=production
 HTTP_HOST=0.0.0.0
-PORT=4040
-HOST=localhost
-
+PORT=3030
 
 # Database connection via URL
 DATABASE_URL=http://crafterZos:crafterZos@127.0.0.1:8080/sonatrachproduction
@@ -19,5 +17,5 @@ MAIN_TABLE=PUIT
 # HDFS services
 HDFS_USER=hadoop
 HDFS_HOST=127.0.0.1
-HDFS_PORT=
-HDFS_URL=
+HDFS_PORT=2222
+HDFS_URL=http://
